@@ -1,6 +1,9 @@
 PHOEBE Project ChangeLog:
 ----------------------------------------------------------------------------
 
+2006-01-31: - DC fitting quickbar did not mark the 2nd spot latitude and
+              longitude due to a missing signal handler. Fixed. Many thanks
+              to Carla Maceroni for pointing this out!
 2006-01-26: - PHOEBE segfaulted on some architectures if ^M characters were
               used (DOS/Windows <CR> character). These characters are now
               automatically removed during parsing.
